--- a/components/server/requirements.txt
+++ b/components/server/requirements.txt
@@ -1,8 +1,8 @@
-llama-index==0.6.0
+llama-index==0.6.21.post1
 Pillow==9.5.0
-PyPDF2==3.0.1
+pypdf==3.9.1
 nltk==3.8.1
 google-cloud-firestore==2.11.1
-fastapi==0.95.1
+fastapi==0.96.0
 uvicorn==0.22.0
 gunicorn==20.1.0
