Resume upload via GCS bucket (#6)
* Refactor constants, update model declaration

* Add Eventarc update and GCS uploads

* Rework gitignore files for simplicity

* Allow for resume upload via GCS

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+data/*
+!data/*Kharkovski*.pdf
+!data/Steven Kim*.pdf
+
 # Environments
 **/.env
-**/setenv.sh
+**/setenv_dev.sh
 
 # Misc
 **/.idea
