--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,28 @@
+OPENAI_API_KEY=....insert your key here...
 ORG_DOMAIN=qarik.com
 PROJECT_ID=skills-bot-dev
+
 REGION=us-central1
 GAE_REGION=us-central
 FIRESTORE_LOCATION=nam5
+
 REGISTRY_NAME=chatbot-repo
 ARTIFACT_REGISTRY=${REGION}-docker.pkg.dev/${PROJECT_ID}/${REGISTRY_NAME}
+
+RESUME_BUCKET_NAME=resume-originals-${PROJECT_ID}
+EMBEDDINGS_BUCKET_NAME=resume-embeddings-${PROJECT_ID}
+
 UI_SVC_NAME=skillsbot-ui
 CHAT_SVC_NAME=skillsbot-backend
+RESUME_SVC_NAME=skillsbot-resumes
+
 ENABLE_IAP=false
 OAUTH_CLIENT_DISPLAY_NAME=chatbot-oauth-client
-CERT="skills-bot-cert"
+CERT=skills-bot-cert
+CHAT_CHANNEL=chatbot-channel
+
+RESUME_MGR_DEV_PORT=5001
+QUERY_ENG_DEV_PORT=5002
+UI_SVC_DEV_PORT=5003
+
+CACHE_TIMEOUT=120
