--- a/components/common/requirements.txt
+++ b/components/common/requirements.txt
@@ -1,8 +1,9 @@
 fastapi==0.100.0
 google-cloud-discoveryengine==0.9.1
 google-cloud-firestore==2.11.1
-llama-index==0.7.4
+llama-index==0.7.10.post1
 nltk==3.8.1
 Pillow==10.0.0
 pypdf==3.12.1
 pyhumps==3.8.0
+Unidecode==1.3.6
