--- a/components/common/requirements.txt
+++ b/components/common/requirements.txt
@@ -1,6 +1,9 @@
-llama-index==0.6.21.post1
-Pillow==9.5.0
-pypdf==3.9.1
-nltk==3.8.1
+fastapi==0.100.0
+google-cloud-discoveryengine==0.9.1
 google-cloud-firestore==2.11.1
-fastapi==0.96.0
+llama-index==0.7.10.post1
+nltk==3.8.1
+Pillow==10.0.0
+pypdf==3.12.1
+pyhumps==3.8.0
+Unidecode==1.3.6
