--- a/components/common/requirements.txt
+++ b/components/common/requirements.txt
@@ -1,10 +1,13 @@
-fastapi==0.100.0
+fastapi==0.100.1
 google-cloud-discoveryengine==0.9.1
 google-cloud-firestore==2.11.1
+google-cloud-storage==2.10.0
 google-generativeai==0.1.0
-llama-index==0.7.10.post1
+gunicorn==20.1.0
+llama-index==0.7.16
 nltk==3.8.1
 Pillow==10.0.0
-pypdf==3.12.1
 pyhumps==3.8.0
+pypdf==3.14.0
 Unidecode==1.3.6
+uvicorn==0.22.0
