Fix embeddings generation in resume manager. Fix docker file group and user ID.

--- a/components/query_engine/Dockerfile
+++ b/components/query_engine/Dockerfile
@@ -11,7 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-FROM python:3.11.0-slim
+FROM python:3.11.4-slim
 
 ENV COMPONENT_NAME="query_engine"
 ENV RUN_FILE="service"
@@ -22,7 +22,7 @@ ENV BASE_DIR="/app"
 ENV PYTHONUNBUFFERED True
 
 # Create group:user to run the application
-RUN groupadd -g 6006 $APP_USER && useradd -m -r -u 6006 -g $APP_USER $APP_USER
+RUN groupadd $APP_USER && useradd -m -r -g $APP_USER $APP_USER
 
 RUN mkdir -p $BASE_DIR/$COMPONENT_NAME
 RUN chown $APP_USER $BASE_DIR
