Add VertexAI Bison model, fix deployment bugs

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 OPENAI_API_KEY=....insert your key here...
+GOOGLE_PALM_API_KEY=....put your key here....
 ORG_DOMAIN=qarik.com
 PROJECT_ID=skills-bot-dev
 
