--- a/components/query_engine/Dockerfile
+++ b/components/query_engine/Dockerfile
@@ -11,7 +11,9 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-FROM python:3.11.4-slim
+FROM python:3.11.4
+# It appears that Chromadb can not be installed in a slim version of python, at least not without bunch of tweaks
+# FROM python:3.11.4-slim
 
 ENV COMPONENT_NAME="query_engine"
 ENV RUN_FILE="service"
