--- a/components/client/package.json
+++ b/components/client/package.json
@@ -14,7 +14,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-scripts": "5.0.1",
