Add VertexAI with embeddings, refactor main query service and component structure

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 OPENAI_API_KEY=....insert your key here...
 GOOGLE_PALM_API_KEY=....put your key here....
 ORG_DOMAIN=qarik.com
-PROJECT_ID=skills-bot-dev
+PROJECT_ID=rk-skills-search
 
 REGION=us-central1
 GAE_REGION=us-central
@@ -12,12 +12,13 @@ ARTIFACT_REGISTRY=${REGION}-docker.pkg.dev/${PROJECT_ID}/${REGISTRY_NAME}
 
 RESUME_BUCKET_NAME=resume-originals-${PROJECT_ID}
 EMBEDDINGS_BUCKET_NAME=resume-embeddings-${PROJECT_ID}
+ME_EMBEDDING_BUCKET=matching-engine-embeddings-${PROJECT_ID}
 
 UI_SVC_NAME=skillsbot-ui
 CHAT_SVC_NAME=skillsbot-backend
 RESUME_SVC_NAME=skillsbot-resumes
 
-ENABLE_IAP=false
+ENABLE_IAP=true
 OAUTH_CLIENT_DISPLAY_NAME=chatbot-oauth-client
 CERT=skills-bot-cert
 CHAT_CHANNEL=chatbot-channel
