Install sequence fix

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ UI_SVC_NAME=skillsbot-ui
 CHAT_SVC_NAME=skillsbot-backend
 RESUME_SVC_NAME=skillsbot-resumes
 
-ENABLE_IAP=true
+ENABLE_IAP=false
 OAUTH_CLIENT_DISPLAY_NAME=chatbot-oauth-client
 CERT=skills-bot-cert
 CHAT_CHANNEL=chatbot-channel
